--- a/data/cards/01769875.yaml
+++ b/data/cards/01769875.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 幻兽王 喀迈拉
 text:
   en: |-
     1 Beast monster + 1 Fiend monster
@@ -27,7 +27,9 @@ text:
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのカード名は、フィールド・墓地に存在する限り「有翼幻獣キマイラ」として扱う。②：このカードが融合召喚した場合に発動できる。このターンのエンドフェイズに相手の手札をランダムに１枚墓地へ送る。③：相手ターンに墓地のこのカードを除外し、自分の墓地の獣族・悪魔族・幻想魔族モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    兽族怪兽+恶魔族怪兽
+    这个卡名的②③效果1回合各能使用1次。①：这张卡只要在场上·墓地存在卡名就视为「有翼幻獣キマイラ／有翼幻兽 喀迈拉」。②：这张卡融合召唤的场合可以发动。这个回合的结束阶段随机将1张对手的手牌送入墓地。③：对手的回合，可以将墓地的这张卡除外，以自己墓地的1只兽族·恶魔族·幻想魔族怪兽为对象发动。将那只怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Beast / Fusion / Effect
 attribute: WIND
