--- a/data/cards/02992467.yaml
+++ b/data/cards/02992467.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 点点和回音
 text:
   en: |-
     Cannot be used as material for a Fusion, Synchro, or Xyz Summon. Cannot be Tributed while face-up in the Monster Zone. If this card is sent to the GY as Link Material: Special Summon it to the Summoning player's opponent's field in Defense Position. You can use this effect of "Click & Echo" up to twice per turn. If Summoned this way, while it is in the Monster Zone, you must keep your hand revealed.
@@ -25,7 +25,8 @@ text:
     このカードは融合・Ｓ・Ｘ召喚の素材にできない。このカード名の②の効果は１ターンに２度まで使用できる。①：このカードがモンスターゾーンに存在する限り、このカードはリリースできない。②：このカードがＬ素材として墓地へ送られた場合に発動する。そのＬ召喚したプレイヤーから見て相手のフィールドに、このカードを守備表示で特殊召喚する。③：このカードの②の効果で特殊召喚したこのカードがモンスターゾーンに存在する限り、自分は手札を公開し続ける。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这张卡不能作为融合·同调·多维召唤的素材。这个卡名的②效果1回合最多可以使用2次。①：只要这张卡在怪兽区存在，这张卡就不能解放。②：这张卡作为链接素材被送入墓地的场合必定发动。将这张卡以守备表示特殊召唤到从那个链接召唤的玩家来看的对手的场上。③：只有用这张卡的②效果特殊召唤的这张卡在怪兽区存在，自己就持续公开手牌。
 card_type: Monster
 monster_type_line: Sea Serpent / Effect
 attribute: WATER
