--- a/data/cards/09709452.yaml
+++ b/data/cards/09709452.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 烈日骑士 盖亚烈焰
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -27,7 +27,9 @@ text:
     ①：このカードの攻撃で相手モンスターを破壊した時に発動できる。このカードはもう１度だけ続けて攻撃できる。②：自分・相手のバトルフェイズ終了時に、このターンにこのカードが戦闘で破壊したモンスターの数まで、自分の墓地の炎属性モンスターを対象として発動できる。そのモンスターを手札に加える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    调整+1只以上调整以外的怪兽
+    ①：这张卡的攻击将对手怪兽破坏时可以发动。这张卡可以仅1次继续攻击。②：自己·对手的战斗阶段结束时，可以以最多为这个回合这张卡用战斗破坏的怪兽的数量的、自己墓地的炎属性怪兽为对象发动。将那些怪兽加入手牌。
 card_type: Monster
 monster_type_line: Pyro / Synchro / Effect
 attribute: FIRE
