--- a/data/cards/11489642.yaml
+++ b/data/cards/11489642.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 三角阵-O
 text:
   en: |-
     If you control "Crystal Skull", "Ashoka Pillar", and "Cabrera Stone": Destroy all cards on the field, also, this turn, your opponent takes any effect damage you would have taken instead. You can banish this card from your GY, then target 1 "Crystal Skull", 1 "Ashoka Pillar", and 1 "Cabrera Stone" in your GY; shuffle them into the Deck, then draw 3 cards. You can only use 1 "Triangle O" effect per turn, and only once that turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分フィールドに「水晶ドクロ」「アショカ・ピラー」「カブレラストーン」が全て存在する場合に発動できる。フィールドのカードを全て破壊する。このターン、自分が受ける効果ダメージは代わりに相手が受ける。②：墓地のこのカードを除外し、自分の墓地の「水晶ドクロ」「アショカ・ピラー」「カブレラストーン」を１体ずつ対象として発動できる。そのモンスターをデッキに戻す。その後、自分は３枚ドローする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：自己场上有「水晶ドクロ／水晶头骨」「アショカ・ピラー／阿育王柱」「カブレラストーン／卡布雷拉石」全部存在的场合可以发动。将场上的卡全部破坏。这个回合，自己要受到的效果伤害由对手代为承受。②：可以将墓地的这张卡除外，以自己墓地的「水晶ドクロ／水晶头骨」「アショカ・ピラー／阿育王柱」「カブレラストーン／卡布雷拉石」各1只为对象发动。那些怪兽返回卡组。那之后，自己抽3张。
 card_type: Spell
 property: Normal
 series:
