--- a/data/cards/12501230.yaml
+++ b/data/cards/12501230.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 战斗机轮
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -27,7 +27,9 @@ text:
     ①：フィールドのこのカードは１ターンに１度だけ相手の効果では破壊されない。②：相手バトルフェイズに１度、手札を１枚捨てて発動できる。このカードの攻撃力は、自分フィールドの他のモンスターの攻撃力を合計した数値の半分アップする。その後、このカードにカウンターを１つ置く。このターン中、相手モンスターは他のモンスターを攻撃対象に選択できない。③：カウンターが置かれているこのカードが戦闘で破壊された場合に発動する。自分フィールドのモンスターを全て破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    调整+1只以上调整以外的怪兽
+    ①：场上的这张卡1回合仅1次不会被对手的效果破坏。②：对手的战斗阶段有1次，可以舍弃1张手牌发动。这张卡的攻击力上升自己场上的其他怪兽的攻击力的合计的一半数值。那之后，在这张卡上放置1个指示物。这个回合中，对手怪兽不能将其他怪兽选择为攻击对象。③：放置有指示物的这张卡被战斗破坏的场合必定发动。将自己场上的怪兽全部破坏。
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
 attribute: EARTH
