--- a/data/cards/13836592.yaml
+++ b/data/cards/13836592.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 百战王 贝希摩斯
 text:
   en: |-
     You can Tribute Summon this card with 1 Tribute. If this card is Normal or Special Summoned: You can target 1 Beast, Beast-Warrior, or Winged Beast monster in your GY; add it to your hand, and if you do, this card loses 700 ATK. This Normal Summoned/Set card is unaffected by the activated effects of Special Summoned monsters. Once per turn, during your End Phase: You can make this card gain 700 ATK.
@@ -25,7 +25,8 @@ text:
     このカードはモンスター１体をリリースしてアドバンス召喚できる。①：このカードが召喚・特殊召喚した場合、自分の墓地の獣族・獣戦士族・鳥獣族モンスター１体を対象として発動できる。そのモンスターを手札に加え、このカードの攻撃力は７００ダウンする。②：通常召喚したこのカードは特殊召喚されたモンスターが発動した効果を受けない。③：自分エンドフェイズに発動できる。このカードの攻撃力は７００アップする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这张卡可以将1只怪兽解放来高等召唤。①：这张卡召唤·特殊召唤的场合，可以以自己墓地的1只兽族·兽战士族·鸟兽族怪兽为对象发动。将那只怪兽加入手牌，这张卡的攻击力下降700。②：通常召唤的这张卡不受特殊召唤的怪兽发动的效果影响。③：自己的结束阶段可以发动。这张卡的攻击力上升700。
 card_type: Monster
 monster_type_line: Beast / Effect
 attribute: EARTH
