--- a/data/cards/27275398.yaml
+++ b/data/cards/27275398.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 黄金荣耀-全速前进！
 text:
   en: |-
     Target 1 "Gold Pride" monster you control; until the end of this turn, it gains 500 ATK, it cannot be destroyed by battle or card effects, and it cannot activate its effects. During the End Phase, if a face-up "Gold Pride" monster(s) you control was destroyed by battle or card effect this turn: You can Set this card from your GY. You can only use this effect of "Gold Pride - Pedal to the Metal!" once per turn.
@@ -29,7 +29,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的②效果1回合只能使用1次。①：可以以自己场上的1只「Gold Pride／黄金荣耀」怪兽为对象发动。直到回合结束时，那只怪兽的攻击力上升500，不会被战斗·效果破坏，不能发动效果。②：自己场上的表侧表示的「Gold Pride／黄金荣耀」怪兽被战斗·效果破坏的回合的结束阶段可以发动。将墓地的这张卡盖放到自己的场上。
 card_type: Spell
 property: Quick-Play
 series:
