--- a/data/cards/36920182.yaml
+++ b/data/cards/36920182.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 世坏同心
 text:
   en: |-
     Activate 1 of these effects;
@@ -30,7 +30,8 @@ text:
     ●自分のフィールド（表側表示）・墓地・除外状態の、「ヴィサス＝スタフロスト」１体と攻撃力１５００／守備力２１００のモンスター４体をデッキに戻し、「ヴィサス」Ｓモンスター１体をＳ召喚扱いでＥＸデッキから特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：可以从以下的效果中选择1个发动。●从自己的墓地将1只攻击力1500/守备力2100的怪兽特殊召唤。●将自己的场上（表侧表示）·墓地·除外状态的、1只「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」和4只攻击力1500/守备力2100的怪兽返回卡组，从额外卡组将1只「ヴィサス／维萨斯」同调怪兽视为同调召唤地特殊召唤。
 card_type: Spell
 property: Normal
 images:
