--- a/data/cards/37442336.yaml
+++ b/data/cards/37442336.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 宇宙类星龙
 text:
   en: |-
     1 Tuner Synchro Monster + 2+ non-Tuner Synchro Monsters
@@ -27,7 +27,9 @@ text:
     このカードは上記のカードをＳ素材にしたＳ召喚でのみＥＸデッキから特殊召喚できる。①：１ターンに１度、このカードのＳ素材としたモンスターの数＋１枚までフィールドの表側表示カードを対象として発動できる（この効果の発動と効果は無効化されない）。そのカードの効果を無効にする。②：自分・相手ターンに、Ｓ召喚したこのカードを除外して発動できる。チューナー以外のＳモンスターを２体以上素材とするドラゴン族Ｓモンスター１体をＳ召喚扱いでＥＸデッキから特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    同调怪兽调整+2只以上调整以外的同调怪兽
+    这张卡只能用将上述卡作为同调素材的同调召唤来从额外卡组特殊召唤。①：1回合1次，可以以最多为作为这张卡的同调素材的怪兽的数量+1张的场上的表侧表示卡为对象发动（这个效果的发动和效果不会被无效化）。那些卡的效果无效。②：自己·对手的回合，可以将同调召唤的这张卡除外发动。从额外卡组将1只需要以2只以上调整以外的同调怪兽作为素材的龙族同调怪兽当作同调召唤地特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: LIGHT
