--- a/data/cards/50834074.yaml
+++ b/data/cards/50834074.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地狱猛禽翼龙
 text:
   en: |-
     If your opponent controls 2 or more face-up non-WIND monsters, those monsters cannot target this card for attacks. You can only use each of the following effects of "Kaitoptera" once per turn. During your Main Phase: You can add 1 "Polymerization" from your Deck to your hand. If this card is banished: You can Special Summon it, then you can add 1 "Polymerization" from your GY to your hand.
@@ -25,7 +25,8 @@ text:
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：相手フィールドに風属性モンスター以外の表側表示モンスターが２体以上存在する場合、その相手モンスターはこのカードを攻撃対象に選択できない。②：自分メインフェイズに発動できる。デッキから「融合」１枚を手札に加える。③：このカードが除外された場合に発動できる。このカードを特殊召喚する。その後、自分の墓地から「融合」１枚を手札に加える事ができる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的②③效果1回合各能使用1次。①：对手场上有2只以上的风属性怪兽以外的表侧表示怪兽存在的场合，那些对手怪兽不能将这张卡选择为攻击对象。②：自己的主要阶段可以发动。从卡组将1张「融合」加入手牌。③：这张卡被除外的场合可以发动。将这张卡特殊召唤。那之后，可以从自己的墓地将1张「融合」加入手牌。
 card_type: Monster
 monster_type_line: Dinosaur / Effect
 attribute: WIND
