--- a/data/cards/71089030.yaml
+++ b/data/cards/71089030.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地缚牢
 text:
   en: |-
     When this card is activated: You can target 1 Effect Monster your opponent controls; this card gains this effect.
@@ -27,7 +27,8 @@ text:
     ①：このカードの発動時に、相手フィールドの効果モンスター１体を対象にできる。その場合、このカードは以下の効果を得る。●このカードがフィールドゾーンに存在する限り、対象の効果モンスターの効果は無効化される。②：自分は通常召喚に加えて１度だけ、自分メインフェイズに「地縛」モンスター１体を召喚できる。③：このカードが相手の効果で破壊された場合、自分のフィールドか墓地に「地縛」モンスターが存在していれば発動する。相手のＬＰを半分にし、相手フィールドの全ての表側表示カードの効果をターン終了時まで無効にする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：这张卡发动时，可以以对手场上的1只效果怪兽为对象。那个场合，这张卡得到以下的效果。●只要这张卡在场地区存在，对象之效果怪兽的效果就无效化。②：自己在通常召唤外可以追加仅1次，在自己的主要阶段召唤1只「地縛／地缚」怪兽。③：这张卡被对手的效果破坏的场合，若自己的场上或墓地有「地縛／地缚」怪兽存在则必定发动。对手的LP变为一半，对手场上的全部表侧表示卡的效果直到回合结束时为止无效。
 card_type: Spell
 property: Field
 series:
