--- a/data/cards/80621253.yaml
+++ b/data/cards/80621253.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 意乐都 小热烈
 text:
   en: |-
     If you control "Visas Starfrost" or a monster with 1500 ATK/2100 DEF, you can Special Summon this card (from your hand). You can only Special Summon "Mannadium Trid" once per turn this way. If this card is destroyed by battle or card effect: You can Special Summon 1 "Mannadium" Tuner from your Deck. You can only use this effect of "Mannadium Trid" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：自分フィールドに「ヴィサス＝スタフロスト」または攻撃力１５００／守備力２１００のモンスターが存在する場合、このカードは手札から特殊召喚できる。②：このカードが戦闘・効果で破壊された場合に発動できる。デッキから「マナドゥム」チューナー１体を特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的以①的方法所作的特殊召唤1回合只能1次，②效果1回合只能使用1次。①：自己场上有「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」或者攻击力1500/守备力2100的怪兽存在的场合，这张卡可以从手牌特殊召唤。②：这张卡被战斗·效果破坏的场合可以发动。从卡组将1只「マナドゥム／意乐都」调整特殊召唤。
 card_type: Monster
 monster_type_line: Fairy / Tuner / Effect
 attribute: FIRE
