--- a/data/cards/83533296.yaml
+++ b/data/cards/83533296.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 转生炎兽的炎军
 text:
   en: |-
     Activate 1 of these effects.
@@ -30,7 +30,10 @@ text:
     ●元々の攻撃力と異なる攻撃力を持つ、炎属性の儀式・融合・Ｓ・Ｘ・Ｌモンスターが自分フィールドに存在する場合、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：可以从以下的效果中选择1个发动。
+    ●可以以自己的墓地·除外状态的3只炎属性怪兽为对象发动。使那3只之中的2只返回卡组，将剩下的1只特殊召唤。用这个效果特殊召唤的怪兽这个回合效果无效化且不能攻击。
+    ●拥有与原本的攻击力不同的攻击力的、炎属性的仪式·融合·同调·多维·链接怪兽在自己场上存在的场合，可以以场上的1张卡为对象发动。将那张卡破坏。
 card_type: Spell
 property: Quick-Play
 series:
