--- a/data/cards/86239173.yaml
+++ b/data/cards/86239173.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地狱角恐龙
 text:
   en: |-
     "Kaitoptera" + 1 Dinosaur or Dragon monster
@@ -27,7 +27,9 @@ text:
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが融合召喚した場合に発動できる。自分のデッキ・墓地からフィールド魔法カード１枚を自分のフィールドゾーンに表側表示で置く。②：このカードは特殊召喚したターン、直接攻撃できる。③：自分メインフェイズに発動できる。恐竜族かドラゴン族のモンスター１体の召喚を行う。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    「ヘルカイトプテラ／地狱猛禽翼龙」+恐龙族·龙族怪兽
+    这个卡名的①③效果1回合各能使用1次。①：这张卡融合召唤的场合可以发动。从自己的卡组·墓地将1张场地魔法卡以表侧表示放置到自己的场地区。②：这张卡在特殊召唤的回合可以直接攻击。③：自己的主要阶段可以发动。进行1只恐龙族或龙族的怪兽的召唤。
 card_type: Monster
 monster_type_line: Dinosaur / Fusion / Effect
 attribute: DARK
