--- a/data/cards/92565383.yaml
+++ b/data/cards/92565383.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 玉米田羽蛇神
 text:
   en: |-
     If this card battles a monster, neither monster can be destroyed by that battle. You can only use each of the following effects of "Cornfield Koator" once per turn. You can discard this card; add 1 monster that mentions "Chimera Fusion" from your Deck to your hand, except "Cornfield Koator". When your opponent activates a card or effect that targets a card(s) you control while you control "Chimera the Flying Mythical Beast" (Quick Effect): You can banish this card from your field or GY; negate that effect, and if you do, destroy that card.
@@ -25,7 +25,8 @@ text:
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードを手札から捨てて発動できる。「コーンフィールド コアトル」以外の「合成獣融合」のカード名が記されたモンスター１体をデッキから手札に加える。②：このカードがモンスターと戦闘を行う場合、その２体はその戦闘では破壊されない。③：自分フィールドに「有翼幻獣キマイラ」が存在し、自分フィールドのカードを対象とする効果を相手が発動した時、フィールド・墓地のこのカードを除外して発動できる。その効果を無効にし破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①③效果1回合各能使用1次。①：可以将这张卡从手牌舍弃发动。从卡组将1只「コーンフィールド コアトル／玉米田羽蛇神」以外的记述有「合成獣融合／合成兽融合」卡名的怪兽加入手牌。②：这张卡与怪兽进行战斗的场合，那2只不会被那次战斗破坏。③：自己场上有「有翼幻獣キマイラ／有翼幻兽 喀迈拉」存在，以自己场上的卡为对象的效果由对手发动时，可以将场上·墓地的这张卡除外发动。使该效果无效并破坏。
 card_type: Monster
 monster_type_line: Illusion / Effect
 attribute: WIND
