--- a/data/cards/00043227.yaml
+++ b/data/cards/00043227.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 后援投手 马格南
 text:
   en: |-
     1 monster Special Summoned from the Extra Deck + 1 monster in the hand
@@ -27,7 +27,9 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の、「融合」魔法カードか「フュージョン」魔法カード１枚を対象として発動できる。そのカードをデッキの一番下に戻す。その後、自分は１枚ドローする。②：他のカードの効果が発動した時、自分の墓地から「融合」魔法カードか「フュージョン」魔法カード１枚を除外し、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    从额外卡组特殊召唤的怪兽+手牌的怪兽
+    这个卡名的①②效果1回合各能使用1次。①：可以以自己墓地的1张「融合」魔法卡或「フュージョン／融合」魔法卡为对象发动。那张卡返回卡组最下面。那之后，自己抽1张。②：其他卡的效果发动时，可以从自己的墓地将1张「融合」魔法卡或「フュージョン／融合」魔法卡除外，以场上的1张卡为对象发动。将那张卡破坏。
 card_type: Monster
 monster_type_line: Fiend / Fusion / Effect
 attribute: LIGHT
