--- a/data/cards/01259814.yaml
+++ b/data/cards/01259814.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 千六百七十七万工房
 text:
   en: |-
     Once per turn: You can target 1 face-up monster on the field; its Type is changed to Machine, also it gains the LIGHT/DARK/EARTH/WATER/FIRE/WIND Attributes (even if this card leaves the field).
@@ -25,7 +25,8 @@ text:
     ①：１ターンに１度、フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターの種族は機械族になり、その属性は「光」「闇」「地」「水」「炎」「風」としても扱う。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：1回合1次，可以以场上的1只表侧表示怪兽为对象发动。那只怪兽的种族变为机械族，其属性也当作「光」「暗」「地」「水」「炎」「风」使用。
 card_type: Trap
 property: Continuous
 images:
