--- a/data/cards/08690387.yaml
+++ b/data/cards/08690387.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地缚戒隶 地画精怪
 text:
   en: |-
     1 DARK Tuner + 1+ non-Tuner monsters
@@ -30,7 +30,9 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手のメインフェイズに、相手フィールドの表側表示モンスター１体を対象として発動できる。相手は以下から１つを選び、自分はその効果を適用する。●対象のモンスターを破壊する。●対象のモンスターの攻撃力分だけ自分のＬＰを回復する。②：自分・相手のバトルフェイズに発動できる。自分の手札・フィールド・墓地のモンスターを融合素材として除外し、「地縛」融合モンスター１体を融合召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    暗属性调整+1只以上调整以外的怪兽
+    这个卡名的①②效果1回合各能使用1次。①：自己·对手的主要阶段，可以以对手场上的1只表侧表示怪兽为对象发动。对手从以下选1个，自己适用那个效果。●将对象怪兽破坏。●按照对象怪兽的攻击力恢复自己的LP。②：自己·对手的战斗阶段可以发动。将自己的手牌·场上·墓地的怪兽作为融合素材除外，将1只「地縛／地缚」融合怪兽融合召唤。
 card_type: Monster
 monster_type_line: Fiend / Synchro / Effect
 attribute: DARK
