--- a/data/cards/24269961.yaml
+++ b/data/cards/24269961.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 破械神王 阎摩
 text:
   en: |-
     2 Fiend monsters
@@ -27,7 +27,9 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚した場合に発動できる。自分のデッキ・墓地から「破械」モンスター１体を手札に加える。②：このカードが墓地に存在する状態で、自分フィールドのカードが戦闘・効果で破壊された場合、このカードを除外して発動できる。自分の手札・墓地から悪魔族モンスター１体を特殊召喚する。その後、自分フィールドのカード１枚を破壊できる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    恶魔族怪兽2只
+    这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤的场合可以发动。从自己的卡组·墓地将1只「破械」怪兽加入手牌。②：这张卡在墓地存在的状态下，自己场上的卡被战斗·效果破坏的场合，可以将这张卡除外发动。从自己的手牌·墓地将1只恶魔族怪兽特殊召唤。那之后，可以将自己场上的1张卡破坏。
 card_type: Monster
 monster_type_line: Fiend / Link / Effect
 attribute: DARK
