--- a/data/cards/28798938.yaml
+++ b/data/cards/28798938.yaml
@@ -12,7 +12,7 @@ name:
   ko: 쌍천의 사사－아훔
   ko_rr: Ssangcheon-ui Sasa - Ahum
   zh-TW:
-  zh-CN:
+  zh-CN: 双天之狮使-阿吽
 text:
   en: |-
     2 "Dual Avatar" monsters
@@ -45,7 +45,9 @@ text:
     "쌍천" 몬스터 × 2
     ①: 이 카드는 융합 소재로 한 몬스터의 원래의 카드명에 따라 이하의 효과를 얻는다. ●"쌍천장 금강": 전투를 실행하는 자신의 "쌍천" 몬스터의 공격력은 데미지 계산시에만 3000 이 된다. ●"쌍천장 밀적": 상대 턴에 1번, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다. ②: 융합 소환한 이 카드가 파괴되었을 경우에 발동할 수 있다. 덱에서 "쌍천권의 웅비" "쌍천각의 홍곡"을 1장씩 특수 소환한다. 그 몬스터는 이 턴에, 전투 / 효과로는 파괴되지 않는다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    「双天」怪兽×2
+    ①：这张卡根据作为融合素材的怪兽的原卡名得到以下的效果。●「双天将 金剛／双天将 金刚」：进行战斗的自己的「双天」怪兽的攻击力在伤害计算时变为3000。●「双天将 密迹」：对手的回合有1次，可以以场上的1张卡为对象发动。将那张卡除外。②：融合召唤的这张卡被破坏的场合可以发动。从卡组特殊召唤「双天拳の熊羆／双天拳之熊罴」「双天脚の鴻鵠／双天脚之鸿鹄」各1只。那些怪兽这个回合不会被战斗或效果破坏。
 card_type: Monster
 monster_type_line: Warrior / Fusion / Effect
 attribute: LIGHT
