--- a/data/cards/34481518.yaml
+++ b/data/cards/34481518.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 魔头炮 红莲恐龙
 text:
   en: |-
     2 Level 4 monsters
@@ -27,7 +27,9 @@ text:
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分の恐竜族モンスターが戦闘で相手モンスターを破壊し墓地へ送った時、このカードのＸ素材を１つ取り除いて発動できる。相手に１０００ダメージを与える。その後、このカードの攻撃力は１０００アップする。②：Ｘ召喚したこのカードが破壊された場合、フィールドのカード１枚を対象として発動できる。そのカードを破壊し、相手に１０００ダメージを与える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    等级4怪兽×2
+    这个卡名的②效果1回合只能使用1次。①：自己的恐龙族怪兽用战斗将对手怪兽破坏并送入墓地时，可以将这张卡的1个多维素材取除发动。给予对手1000伤害。那之后，这张卡的攻击力上升1000。②：多维召唤的这张卡被破坏的场合，可以以场上的1张卡为对象发动。将那张卡破坏，给予对手1000伤害。
 card_type: Monster
 monster_type_line: Dinosaur / Xyz / Effect
 attribute: FIRE
