--- a/data/cards/36629635.yaml
+++ b/data/cards/36629635.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 蒲公英白狮
 text:
   en: |-
     If this card is sent from the hand or field to the GY: You can Special Summon 3 "White Fluff Tokens" (Plant/WIND/Level 1/ATK 0/DEF 0) in Defense Position. You cannot Special Summon monsters from the Extra Deck the turn you activate this effect. You can only use this effect of "Dandy White Lion" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の効果は１ターンに１度しか使用できず、この効果を発動するターン、自分はＥＸデッキからモンスターを特殊召喚できない。①：このカードが手札・フィールドから墓地へ送られた場合に発動できる。自分フィールドに「白綿毛トークン」（植物族・風・星１・攻／守０）３体を守備表示で特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的效果1回合只能使用1次，这个效果发动的回合，自己不能从额外卡组将怪兽特殊召唤。①：这张卡被从手牌·场上送入墓地的场合可以发动。将3只「白綿毛トークン／白绵毛衍生物」（植物族·风·1星·攻/守0）以守备表示特殊召唤到自己的场上。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: EARTH
