--- a/data/cards/44094981.yaml
+++ b/data/cards/44094981.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地缚戒隶 地画狮鹫
 text:
   en: |-
     1 DARK Tuner + 1+ non-Tuner monsters
@@ -27,7 +27,9 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手ターンに発動できる。自分の墓地から「地縛戒隷 ジオグリフォン」以外の「地縛」モンスター１体を守備表示で特殊召喚する。このターン、自分は融合・ＳモンスターしかＥＸデッキから特殊召喚できない。②：このカードが相手によって破壊された場合に発動できる。フィールドのカード１枚を破壊する。その後、自分のフィールド・墓地の「地縛」モンスターの種類×３００ダメージを相手に与える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    暗属性调整+1只以上调整以外的怪兽
+    这个卡名的①②效果1回合各能使用1次。①：自己·对手的回合可以发动。从自己的墓地将1只「地縛戒隷ジオグリフォン／地缚戒隶 地画狮鹫」以外的「地縛／地缚」怪兽以守备表示特殊召唤。这个回合，自己从额外卡组特殊召唤的只能是融合·同调怪兽。②：这张卡因对手而被破坏的场合可以发动。将场上的1张卡破坏。那之后，给予对手自己的场上·墓地的「地縛／地缚」怪兽的种类×300伤害。
 card_type: Monster
 monster_type_line: Fiend / Synchro / Effect
 attribute: DARK
