--- a/data/cards/50357013.yaml
+++ b/data/cards/50357013.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 十种神镜阵
 text:
   en: |-
     Send monsters from your hand and/or face-up field to the GY, whose total Levels equal 10; draw 2 cards
@@ -25,7 +25,8 @@ text:
     ①：レベルの合計が１０になるように、自分の手札・フィールド（表側表示）からモンスターを任意の数だけ墓地へ送って発動できる。自分は２枚ドローする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：可以从自己的手牌·场上（表侧表示）将任意数量的等级合计为10的怪兽送入墓地发动。自己抽2张。 ​​​
 card_type: Spell
 property: Normal
 images:
