--- a/data/cards/63136489.yaml
+++ b/data/cards/63136489.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 合成兽融合
 text:
   en: |-
     During the Main Phase: Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material, including a Beast or Fiend monster. During your Main Phase, if this card in your GY and you have "Chimera the Flying Mythical Beast" on your field or in your GY: You can activate 1 of these effects;
@@ -28,7 +28,8 @@ text:
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分・相手のメインフェイズに発動できる。獣族・悪魔族モンスターのいずれかを含む、自分の手札・フィールドのモンスターを融合素材とし、融合モンスター１体を融合召喚する。②：自分メインフェイズにこのカードが墓地に存在し、自分のフィールドか墓地に「有翼幻獣キマイラ」が存在する場合、以下から１つを選択して発動できる。●このカードを手札に加える。●このカードを除外し、自分のデッキ・墓地から「幻獣王ガゼル」１体と「バフォメット」１体を特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的②效果1回合只能使用1次。①：自己·对手的主要阶段可以发动。将包含兽族·恶魔族怪兽的任意1种的、自己的手牌·场上的怪兽作为融合素材，融合召唤1只融合怪兽。②：自己的主要阶段这张卡在墓地存在，自己的场上或墓地有「有翼幻獣キマイラ／有翼幻兽 喀迈拉」存在的场合，可以从以下的效果中选择1个发动。●将这张卡加入手牌。●将这张卡除外，从自己的卡组·墓地将1只「幻獣王ガゼル／幻兽王 加塞尔」和1只「バフォメット／巴风特」特殊召唤。
 card_type: Spell
 property: Quick-Play
 series:
