--- a/data/cards/71101678.yaml
+++ b/data/cards/71101678.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地缚戒隶 地画格莱杨拉波尔
 text:
   en: |-
     1 "Earthbound" Fusion Monster + 1 "Earthbound" Synchro Monster
@@ -27,7 +27,9 @@ text:
     このカードは融合召喚でしか特殊召喚できない。このカード名の②の効果は１ターンに１度しか使用できない。①：このカードがモンスターと戦闘を行うダメージステップ開始時に発動する。そのモンスターの攻撃力・守備力を０にする。②：相手モンスターが戦闘・効果で破壊された場合に発動できる。相手フィールドのカードを全て破壊する。③：表側表示のこのカードが相手によってフィールドから離れた場合に発動できる。デッキ・ＥＸデッキから「地縛」モンスター１体を特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    「地縛／地缚」融合怪兽+「地縛／地缚」同调怪兽
+    这张卡只能用融合召唤来特殊召唤。这个卡名的②效果1回合只能使用1次。①：这张卡与怪兽进行战斗的伤害步骤开始时必定发动。那只怪兽的攻击力·守备力变为0。②：对手怪兽被战斗·效果破坏的场合可以发动。将对手场上的卡全部破坏。③：表侧表示的这张卡因对手而从场上离开的场合可以发动。从卡组·额外卡组将1只「地縛／地缚」怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Fiend / Fusion / Effect
 attribute: DARK
