--- a/data/cards/88554436.yaml
+++ b/data/cards/88554436.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 破械神 修耶摩
 text:
   en: |-
     You can target 1 card you control; destroy it, then you can destroy 1 Spell/Trap on the field. If this card is in your GY: You can target 1 Fiend monster, or 1 Set card, you control; destroy it, and if you do, Special Summon this card, but place it on the bottom of the Deck when it leaves the field. You can only use each effect of "Unchained Soul Shyama" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドのカード１枚を対象として発動できる。そのカードを破壊する。その後、フィールドの魔法・罠カード１枚を破壊できる。②：このカードが墓地に存在する場合、自分フィールドの、悪魔族モンスター１体か裏側表示カード１枚を対象として発動できる。そのカードを破壊し、このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合にデッキの一番下に戻る。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：可以以自己场上的1张卡为对象发动。将那张卡破坏。那之后，可以将场上的1张魔法陷阱卡破坏。②：这张卡在墓地存在的场合，可以以自己场上的、1只恶魔族怪兽或1张里侧表示的卡为对象发动。将那张卡破坏，将这张卡特殊召唤。用这个效果特殊召唤的这张卡从场上离开的场合返回卡组最下面。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: WATER
