--- a/data/cards/98986900.yaml
+++ b/data/cards/98986900.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 泰勒玛科技 克拉提斯
 text:
   en: |-
     2 Level 8 monsters
@@ -30,7 +30,9 @@ text:
     このカード名の②の効果は１ターンに１度しか使用できない。①：相手が魔法カード以外のカードの効果を発動する度に、このカードに魔力カウンターを１つ置く（最大９つまで）。②：このカードの魔力カウンターを３つ取り除いて発動できる。以下の効果から１つを適用する。●デッキから魔法カード１枚か魔法使い族の効果モンスター１体を手札に加える。●手札・デッキから魔法使い族モンスター１体を特殊召喚する。③：このカードが破壊される場合、代わりにこのカードのＸ素材を１つ取り除く事ができる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    等级8怪兽×2
+    这个卡名的②效果1回合只能使用1次。①：每次对手发动魔法卡以外的卡的效果就在这张卡上放置1个魔力指示物（最多9个）。②：可以将这张卡的3个魔力指示物取除发动。从以下的效果中适用1个。●从卡组将1张魔法卡或1只魔法师族的效果怪兽加入手牌。●从手牌·卡组将1只魔法师族怪兽特殊召唤。③：这张卡要被破坏的场合，可以将这张卡的1个多维素材取除作为代替。
 card_type: Monster
 monster_type_line: Spellcaster / Xyz / Effect
 attribute: DARK
