--- a/data/cards/11802691.yaml
+++ b/data/cards/11802691.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 查理叙事诗
 text:
   en: |-
     Reveal 1 "Noble Arms" Equip Spell in your hand, and if you do, Special Summon 1 "Infernoble Knight" monster from your hand or Deck, then either equip it with the revealed card or send the revealed card to the GY. You can banish this card from your GY, then target 1 "Infernoble Knight Emperor Charles" you control; equip it with 1 "Noble Knight" monster from your hand or Deck as an Equip Spell that gives it 500 ATK. You can only use each effect of "The Epic Poem of Charles" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札の「聖剣」装備魔法カード１枚を相手に見せ、手札・デッキから「焔聖騎士」モンスター１体を特殊召喚する。その後、見せたカードをそのモンスターに装備するか、墓地へ送る。②：墓地のこのカードを除外し、自分フィールドの「焔聖騎士帝－シャルル」１体を対象として発動できる。手札・デッキから「聖騎士」モンスター１体を選び、攻撃力５００アップの装備魔法カード扱いで対象のモンスターに装備する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：可以向对手展示手牌的1张「聖剣／圣剑」装备魔法卡，从手牌·卡组将1只「焔聖騎士／焰圣骑士」怪兽特殊召唤。那之后，将展示过的卡装备给那只怪兽或送入墓地。②：可以将墓地的这张卡除外，以自己场上的1只「焔聖騎士帝－シャルル／焰圣骑士帝-查理」为对象发动。从手牌·卡组选1只「聖騎士／圣骑士」怪兽，视为使攻击力上升500的装备魔法卡装备给对象怪兽。
 card_type: Trap
 property: Normal
 images:
