--- a/data/cards/35103106.yaml
+++ b/data/cards/35103106.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 进化帝 拉兹龙
 text:
   en: |-
     2 Level 6 monsters
@@ -27,7 +27,9 @@ text:
     ①：相手はＸ素材を持っているこのカードをモンスターの効果の対象にできない。②：相手がカードの効果を発動した時、このカードのＸ素材を２つ取り除き、相手フィールドの表側表示カード１枚を対象として発動できる（このカードが爬虫類族・恐竜族モンスターのみをＸ素材としている場合、取り除くＸ素材の数を１つにできる）。そのカードの効果をターン終了時まで無効にする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    等级6怪兽×2
+    ①：对手不能将拥有多维素材的这张卡作为怪兽的效果的对象。②：对手发动卡的效果时，可以将这张卡的2个多维素材取除，以对手场上的1张表侧表示的卡为对象发动（这张卡只拥有爬虫类族·恐龙族怪兽作为多维素材的场合，取除的多维素材的数量可以为1个）。使那张卡的效果直到回合结束时为止无效。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: FIRE
