--- a/data/cards/36320744.yaml
+++ b/data/cards/36320744.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 环绕圣剑的王姬 安吉莉卡
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -27,7 +27,9 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚した場合に発動できる。デッキから「焔聖騎士帝－シャルル」のカード名が記されたカードまたは「オリファンの角笛」１枚を手札に加える。②：フィールドのこのカードが攻撃・効果の対象になった時に発動できる。デッキから戦士族・炎属性モンスター１体を墓地へ送り、このカードをエンドフェイズまで除外する。その後、デッキ・ＥＸデッキから「ローラン」モンスター１体を特殊召喚できる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    调整+1只以上调整以外的怪兽
+    这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤的场合可以发动。从卡组将1张记述有「焔聖騎士帝－シャルル／焰圣骑士帝-查理」卡名的卡或者「オリファンの角笛／象牙角笛」加入手牌。②：场上的这张卡成为攻击·效果的对象时可以发动。从卡组将1只战士族·炎属性怪兽送入墓地，将这张卡直到结束阶段为止除外。那之后，可以从卡组·额外卡组将1只「ローラン／罗兰德」怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Synchro / Effect
 attribute: FIRE
