--- a/data/cards/54126514.yaml
+++ b/data/cards/54126514.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 变幻骚灵 渗透佩莉
 text:
   en: |-
     This card can attack directly. You can only use each of the following effects of "Altergeist Perinetrator" once per turn. When this card inflicts battle damage to your opponent: You can draw 1 card. If this card is sent from the field to the GY: You can send 1 "Altergeist" card from your hand, Deck, or face-up field to the GY, except "Altergeist Perinetrator".
@@ -25,7 +25,8 @@ text:
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードは直接攻撃できる。②：このカードが相手に戦闘ダメージを与えた時に発動できる。自分は１枚ドローする。③：このカードがフィールドから墓地へ送られた場合に発動できる。自分の手札・デッキ・フィールド（表側表示）から「オルターガイスト・ペリネトレータ」以外の「オルターガイスト」カード１枚を墓地へ送る。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的②③效果1回合各能使用1次。①：这张卡可以直接攻击。②：这张卡给予对手战斗伤害时可以发动。自己抽1张。③：这张卡被从场上送入墓地的场合可以发动。将自己的手牌·卡组·场上（表侧表示）将1张「オルターガイスト・ペリネトレータ／变幻骚灵 渗透佩莉」以外的「オルターガイスト／变幻骚灵」卡送入墓地。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: FIRE
