--- a/data/cards/58143766.yaml
+++ b/data/cards/58143766.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 火山种散射
 text:
   en: |-
     Activate 1 of these effects.
@@ -30,7 +30,10 @@ text:
     ●フィールドの炎族モンスター１体を対象として発動できる。そのモンスターの元々の攻撃力分のダメージを相手に与える。自分フィールドのモンスターを対象として発動した場合、この効果で与えるダメージは半分になる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：可以从以下的效果选择1个发动（这个卡名的以下效果1回合各只能选择1次）。
+    ●从卡组选1只「ヴォルカニック／火山种」怪兽加入手牌或无视召唤条件地特殊召唤。用这个效果特殊召唤的怪兽在结束阶段返回手牌。
+    ●可以以场上的1只炎族怪兽为对象发动。给予对手那只怪兽的原本的攻击力数值的伤害。以自己场上的怪兽为对象发动的场合，用这个效果给予的伤害变为一半。
 card_type: Trap
 property: Normal
 series:
