--- a/data/cards/59131526.yaml
+++ b/data/cards/59131526.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 水之轮唱
 text:
   en: |-
     Banish 1 card from your hand, and if you do, during your next Standby Phase, you can add up to 2 cards with the banished card's name from your Deck to your hand. If this card was activated while your opponent controlled no cards, you cannot activate cards, or the effects of cards, with the banished card's original name for the rest of that turn.
@@ -25,7 +25,8 @@ text:
     ①：自分の手札を１枚選んで除外する。次の自分スタンバイフェイズに、この効果で除外したカードの同名カードを２枚までデッキから手札に加える事ができる。相手フィールドにカードが存在しない状態でこのカードを発動した場合、発動したターンの終了時まで自分はこの効果で除外したカード及びそのカードと元々のカード名が同じカードの効果を発動できない。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：选1张自己的手牌除外。下次自己的准备阶段，可以从卡组将被这个效果除外的卡的2张同名卡加入手牌。对手场上没有卡存在的状态下将这张卡发动的场合，直到发动回合的结束时为止自己不能发动用这个效果除外的卡以及与那张卡原本的卡名相同的卡的效果。
 card_type: Spell
 property: Normal
 images:
