--- a/data/cards/62714453.yaml
+++ b/data/cards/62714453.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 熊极天-北极=星
 text:
   en: |-
     Cannot be Synchro Summoned. Must be Special Summoned (from your Extra Deck) by sending 2 monsters you control with a Level difference of 1 to the GY (1 Tuner and 1 non-Tuner). You can Tribute 1 Level 8 "Ursarctic" monster from your hand or field and this card; Special Summon 1 Level 7 "Ursarctic" Synchro Monster from your Extra Deck, ignoring its Summoning conditions, and if you do, it gains this effect.
@@ -26,7 +26,8 @@ text:
     このカードはＳ召喚できず、レベルの差が１となるように自分フィールドからチューナー１体とチューナー以外のモンスター１体を墓地へ送った場合のみ特殊召喚できる。①：このカードと自分の手札・フィールドのレベル８の「ベアルクティ」モンスター１体をリリースして発動できる。レベル７の「ベアルクティ」Ｓモンスター１体を召喚条件を無視してＥＸデッキから特殊召喚する。この効果で特殊召喚したモンスターは以下の効果を得る。●相手はＥＸデッキから特殊召喚された、レベルを持つモンスターの効果を発動できない。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这张卡不能同调召唤，只有从自己的场上将等级差为1的1只调整和1只调整以外的怪兽送入墓地的场合才能特殊召唤。①：可以将这张卡和自己的手牌·场上的1只等级8的「ベアルクティ／熊极天」怪兽解放发动。从额外卡组将1只等级7的「ベアルクティ／熊极天」同调怪兽无视召唤条件地特殊召唤。用这个效果特殊召唤的怪兽得到以下的效果。●对手不能发动从额外卡组特殊召唤的、拥有等级的怪兽的效果。
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
 attribute: WATER
