--- a/data/cards/84262395.yaml
+++ b/data/cards/84262395.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地缚解放
 text:
   en: |-
     When a Level 6 or higher monster(s) is Normal or Special Summoned: Tribute 1 Level 10 "Earthbound" monster; destroy as many monsters your opponent controls as possible, and if you do, inflict damage to them equal to the destroyed monsters' total original ATK.
@@ -25,7 +25,8 @@ text:
     ①：フィールドにレベル６以上のモンスターが召喚・特殊召喚された時、自分フィールドのレベル１０の「地縛」モンスター１体をリリースして発動できる。相手フィールドのモンスターを全て破壊し、破壊したモンスターの元々の攻撃力の合計分のダメージを相手に与える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：场上有等级6以上的怪兽召唤·特殊召唤时，可以将自己场上的1只等级10的「地縛／地缚」怪兽解放发动。将对手场上的怪兽全部破坏，给予对手破坏的怪兽的原本攻击力合计数值的伤害。
 card_type: Trap
 property: Normal
 series:
