--- a/data/cards/91323605.yaml
+++ b/data/cards/91323605.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 状况GUY
 text:
   en: |-
     If a monster you control is destroyed by your opponent's attack or card effect: Place face-up in your Field Zone, 1 Field Spell from your Deck with a different name than the cards in the Field Zones, then reveal 5 monsters from your Deck that can be Special Summoned, with different names from each other, your opponent randomly picks 1 for you to Special Summon, also shuffle the rest into your Deck. You can only activate 1 "How Did Dai Get Here?" per turn.
@@ -29,7 +29,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：自己场上的怪兽被对手的攻击·效果破坏的场合，将1张与场地区的卡卡名不同的场地魔法卡以表侧表示放置到自己的场地区。那之后，从卡组向对手展示5只卡名不同且可以特殊召唤的怪兽，对手从那之中随机选1只。将那1只特殊召唤到自己的场上，剩下的返回卡组。
 card_type: Trap
 property: Normal
 images:
