--- a/data/cards/96352712.yaml
+++ b/data/cards/96352712.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 夸大化
 text:
   en: |-
     At the start of the Damage Step, if a monster battles another monster: Activate 1 of these effects;
@@ -32,7 +32,11 @@ text:
     ●その戦闘を行うモンスター２体を破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：怪兽之间进行战斗的伤害步骤开始时，可以从以下的效果中选择1个发动。
+    ●使那只攻击怪兽变为守备表示。
+    ●使那只攻击对象怪兽返回手牌。
+    ●将进行那次战斗的2只怪兽破坏。
 card_type: Spell
 property: Quick-Play
 images:
