--- a/data/cards/11654067.yaml
+++ b/data/cards/11654067.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 火焰喷射
 text:
   en: |-
     Send 1 Pyro monster from your Deck to the GY, then, if it is a "Volcanic" monster, you can apply 1 of these effects.
@@ -30,7 +30,10 @@ text:
     ●相手フィールドに「ボムトークン」（炎族・炎・星１・攻／守１０００）１体を特殊召喚する。このトークンが破壊された時にそのコントローラーは５００ダメージを受ける。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：从卡组将1只炎族怪兽送入墓地。用这个效果将「ヴォルカニック／火山种」怪兽送入墓地的场合，可以再从以下的效果中选1个适用。
+    ●给予对手其等级×100伤害。
+    ●将1只「ボムトークン／炸弹衍生物」（炎族·炎·1星·攻/守1000）特殊召唤到对手的场上。这些衍生物被破坏时给予其操作者500伤害。
 card_type: Spell
 property: Normal
 images:
