--- a/data/cards/13014905.yaml
+++ b/data/cards/13014905.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 火天兽-蜡烛
 text:
   en: |-
     If this card is added to your hand, except by drawing it: You can Special Summon it. You can only use this effect of "Agnimal Candle" once per turn. Once per Chain, up to thrice per turn, if a monster(s) is sent to your GY (except during the Damage Step): You can increase or decrease this card's Level by 1.
@@ -25,7 +25,8 @@ text:
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードがドロー以外の方法で手札に加わった場合に発動できる。このカードを特殊召喚する。②：１ターンに３度まで、モンスターが自分の墓地へ送られた場合に発動できる（同一チェーン上では１度まで）。このカードのレベルを１つ上げるか下げる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①效果1回合只能使用1次。①：这张卡被抽卡以外的方法加入手牌的场合可以发动。将这张卡特殊召唤。②：1回合最多3次，有怪兽被送入自己的墓地的场合可以发动（同一连锁上最多1次）。这张卡的等级上升或下降1。
 card_type: Monster
 monster_type_line: Pyro / Tuner / Effect
 attribute: FIRE
