--- a/data/cards/19544412.yaml
+++ b/data/cards/19544412.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 选手入场宣告
 text:
   en: |-
     (This card is always treated as a "Battlin' Boxing" card.)
@@ -26,7 +26,8 @@ text:
     このカード名はルール上「バーニングナックル」カードとしても扱う。このカード名のカードは１ターンに１枚しか発動できない。①：手札から「ＢＫ」モンスター１体を特殊召喚する。その後、自分フィールドのＸモンスターの数までフィールドの魔法・罠カードを破壊できる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名规则上也视为「バーニングナックル／燃烧拳」卡。这个卡名的卡1回合只能发动1张。①：从手牌将1只「BK」怪兽特殊召唤。那之后，可以按照最多为自己场上的多维怪兽的数量将场上的魔法陷阱卡破坏。
 card_type: Spell
 property: Normal
 series:
