--- a/data/cards/28954097.yaml
+++ b/data/cards/28954097.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 镜剑骑士
 text:
   en: |-
     If this card battles a monster, neither monster can be destroyed by that battle. You can only use each of the following effects of "Mirror Swordsman" once per turn. (Quick Effect): You can Tribute this card; Special Summon 1 monster that mentions "Chimera Fusion" from your Deck, except "Mirror Swordsman". When your opponent activates a monster effect on the field while you control "Chimera the Flying Mythical Beast" (Quick Effect): You can banish this card from your field or GY; negate that effect.
@@ -25,7 +25,8 @@ text:
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手ターンに、このカードをリリースして発動できる。「ミラー ソードナイト」以外の「合成獣融合」のカード名が記されたモンスター１体をデッキから特殊召喚する。②：このカードがモンスターと戦闘を行う場合、その２体はその戦闘では破壊されない。③：自分フィールドに「有翼幻獣キマイラ」が存在し、相手フィールドのモンスターが効果を発動した時、フィールド・墓地のこのカードを除外して発動できる。その効果を無効にする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①③效果1回合各能使用1次。①：自己·对手的回合，可以将这张卡解放发动。从卡组将1只「ミラー ソードナイト／镜剑骑士」以外的记述有「合成獣融合／合成兽融合」卡名的怪兽特殊召唤。②：这张卡与怪兽进行战斗的场合，那2只不会被那次战斗破坏。③：自己场上有「有翼幻獣キマイラ／有翼幻兽 喀迈拉」存在，对手场上的怪兽发动效果时，可以将场上·墓地的这张卡除外发动。使该效果无效。
 card_type: Monster
 monster_type_line: Illusion / Effect
 attribute: LIGHT
