--- a/data/cards/41443249.yaml
+++ b/data/cards/41443249.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 救援王牌 阻燃灭火员
 text:
   en: |-
     You can banish 1 "Rescue-ACE" card from your GY; Special Summon this card from your hand. If you control another "Rescue-ACE" monster (Quick Effect): You can target 1 Effect Monster your opponent controls; change it to face-down Defense Position. If this card is sent to the GY: You can target 1 of your banished "Rescue-ACE" monsters, except a Level 8 monster; Special Summon it. You can only use each effect of "Rescue-ACE Preventer" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地から「Ｒ－ＡＣＥ」カード１枚を除外して発動できる。このカードを手札から特殊召喚する。②：自分・相手ターンに、自分フィールドに他の「Ｒ－ＡＣＥ」モンスターが存在する場合、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターを裏側守備表示にする。③：このカードが墓地へ送られた場合、レベル８モンスター以外の自分の除外状態の「Ｒ－ＡＣＥ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②③效果1回合各能使用1次。①：可以从自己的墓地将1张「R－ACE／救援王牌」卡除外发动。将这张卡从手牌特殊召唤。②：自己·对手的回合，自己场上有其他的「R－ACE／救援王牌」怪兽存在的场合，可以以对手场上的1只效果怪兽为对象发动。那只怪兽变为里侧守备表示。③：这张卡被送入墓地的场合，可以以等级8怪兽以外的自己的除外状态的1只「R－ACE／救援王牌」怪兽为对象发动。将那只怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: FIRE
