--- a/data/cards/46939151.yaml
+++ b/data/cards/46939151.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地缚囚人 土地看守者
 text:
   en: |-
     If this card is Normal or Special Summoned: You can Special Summon 1 Level 5 or lower "Earthbound" monster from your Deck or GY, except "Earthbound Prisoner Ground Keeper", also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fusion and Synchro Monsters. You can only use this effect of "Earthbound Prisoner Ground Keeper" once per turn. "Earthbound" monsters you control cannot be destroyed by battle or card effects while a card is in a Field Zone.
@@ -25,7 +25,8 @@ text:
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。「地縛囚人 グランド・キーパー」を除く、レベル５以下の「地縛」モンスター１体を自分のデッキ・墓地から特殊召喚する。この効果の発動後、ターン終了時まで自分は融合・ＳモンスターしかＥＸデッキから特殊召喚できない。②：フィールドゾーンにカードが存在する限り、自分フィールドの「地縛」モンスターは戦闘・効果では破壊されない。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①效果1回合只能使用1次。①：这张卡召唤·特殊召唤的场合可以发动。从自己的卡组·墓地将1只除「地縛囚人グランド・キーパー／地缚囚人 土地看守者」之外的、等级5以下的「地縛／地缚」怪兽特殊召唤。这个效果发动后，直到回合结束时为止自己从额外卡组特殊召唤的只能是融合·同调怪兽。②：只要场地区有卡存在，自己场上的「地縛／地缚」怪兽就不会被战斗·效果破坏。
 card_type: Monster
 monster_type_line: Fiend / Tuner / Effect
 attribute: DARK
