--- a/data/cards/53404966.yaml
+++ b/data/cards/53404966.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 焰圣骑士-里恰尔代托
 text:
   en: |-
     You can banish this card from your hand or GY; Special Summon 1 Level 4 or lower FIRE Warrior monster from your hand as a Tuner. If this card is Normal or Special Summoned: You can target 1 Level 4 or lower FIRE Warrior monster in your GY, except "Infernoble Knight - Ricciardetto"; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Warrior monsters. You can only use 1 "Infernoble Knight - Ricciardetto" effect per turn, and only once that turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：手札・墓地のこのカードを除外して発動できる。手札からレベル４以下の戦士族・炎属性モンスター１体をチューナー扱いで特殊召喚する。②：このカードが召喚・特殊召喚した場合、「焔聖騎士－リッチャルデット」を除く、自分の墓地のレベル４以下の戦士族・炎属性モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果の発動後、ターン終了時まで自分は戦士族モンスターしか特殊召喚できない。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：可以将手牌·墓地的这张卡除外发动。从手牌将1只等级4以下的战士族·炎属性怪兽视为调整特殊召唤。②：这张卡召唤·特殊召唤的场合，可以以除「焔聖騎士－リッチャルデット／焰圣骑士-里恰尔代托」之外的、自己墓地的1只等级4以下的战士族·炎属性怪兽为对象发动。将那只怪兽特殊召唤。这个效果发动后，直到回合结束时自己特殊召唤的只能是战士族怪兽。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
 attribute: FIRE
