--- a/data/cards/57296396.yaml
+++ b/data/cards/57296396.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 涅姆蕾莉娅之狼
 text:
   en: |-
     Special Summon 1 "Nemleria" monster or 1 Level 10 Beast monster from your hand or Deck in Defense Position, but return it to the hand during the End Phase. You can banish this card from your GY, then target 1 face-up monster your opponent controls; it loses 100 ATK/DEF for each of your cards that are currently banished face-down, until the end of this turn. You can only use each effect of "Nemleria Louve" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札・デッキから「ネムレリア」モンスターか獣族・レベル１０モンスター１体を守備表示で特殊召喚する。この効果で特殊召喚したモンスターはエンドフェイズに手札に戻る。②：墓地のこのカードを除外し、相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターの攻撃力・守備力はターン終了時まで、自分の除外状態の裏側のカードの数×１００ダウンする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：从手牌·卡组将1只「ネムレリア／涅姆蕾莉娅」怪兽或兽族·等级10怪兽以守备表示特殊召唤。用这个效果特殊召唤的怪兽在结束阶段返回手牌。②：可以将墓地的这张卡除外，以对手场上的1只表侧表示怪兽为对象发动。那只怪兽的攻击力·守备力直到回合结束时下降自己的除外状态的里侧的卡的数量×100。
 card_type: Trap
 property: Normal
 series:
