--- a/data/cards/57357130.yaml
+++ b/data/cards/57357130.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 转生炎兽 黄鼬
 text:
   en: |-
     If you have 2 or more "Salamangreat" monsters in your GY: You can Special Summon this card from your hand. If a "Salamangreat" Ritual, Fusion, Synchro, Xyz, and/or Link Monster(s) is Special Summoned to your field while this card is in your GY (except during the Damage Step): You can target 1 other "Salamangreat" monster in your GY; place this card on the bottom of the Deck, and if you do, Special Summon that monster to your opponent's field, then draw 1 card. You can only use each effect of "Salamangreat Wheesel" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の「サラマングレイト」モンスターが２体以上の場合に発動できる。このカードを手札から特殊召喚する。②：このカードが墓地に存在する状態で、自分フィールドに「サラマングレイト」儀式・融合・Ｓ・Ｘ・Ｌモンスターが特殊召喚された場合、このカード以外の自分の墓地の「サラマングレイト」モンスター１体を対象として発動できる。このカードをデッキの一番下に戻し、対象のモンスターを相手フィールドに特殊召喚する。その後、自分は１枚ドローする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：自己墓地的「サラマングレイト／转生炎兽」怪兽为2只以上的场合可以发动。将这张卡从手牌特殊召唤。②：这张卡在墓地存在的状态下，自己场上有「サラマングレイト／转生炎兽」仪式·融合·同调·多维·链接怪兽特殊召唤的场合，可以以这张卡以外的自己墓地的1只「サラマングレイト／转生炎兽」怪兽为对象发动。这张卡返回卡组最下面，将对象怪兽特殊召唤到对手的场上。那之后，自己抽1张。
 card_type: Monster
 monster_type_line: Cyberse / Tuner / Effect
 attribute: FIRE
