--- a/data/cards/84384943.yaml
+++ b/data/cards/84384943.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 卡布雷拉石
 text:
   en: |-
     If this card is Summoned: You can add 1 "Triangle O" from your Deck to your hand, then, if this card is in Attack Position, change it to Defense Position. You can only use this effect of "Cabrera Stone" once per turn. If this card is destroyed by battle or card effect: Take 1000 damage.
@@ -25,7 +25,8 @@ text:
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚・反転召喚・特殊召喚した場合に発動できる。デッキから「トライアングル－Ｏ」１枚を手札に加える。このカードが攻撃表示の場合、さらにこのカードは守備表示になる。②：このカードが戦闘・効果で破壊された場合に発動する。自分は１０００ダメージを受ける。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①效果1回合只能使用1次。①：这张卡召唤·反转召唤·特殊召唤的场合可以发动。从卡组将1张「トライアングル－O／三角阵-O」加入手牌。这张卡是攻击表示的场合，在使这张卡变为守备表示。②：这张卡被战斗·效果破坏的场合必定发动。自己受到1000伤害。
 card_type: Monster
 monster_type_line: Rock / Effect
 attribute: EARTH
