--- a/data/cards/84755744.yaml
+++ b/data/cards/84755744.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 转生炎兽 跳虎
 text:
   en: |-
     You can discard 1 other "Salamangreat" card; Special Summon this card from your hand. You can only use this effect of "Salamangreat Teeger" once per turn. If this card you control would be used as Synchro Material for a FIRE monster, you can treat it as a non-Tuner. Once per turn: You can increase or decrease this card's Level by 1.
@@ -25,7 +25,8 @@ text:
     このカード名の①の効果は１ターンに１度しか使用できない。①：手札から他の「サラマングレイト」カード１枚を捨てて発動できる。このカードを手札から特殊召喚する。②：自分フィールドのこのカードを炎属性ＳモンスターのＳ素材とする場合、このカードをチューナー以外のモンスターとして扱う事ができる。③：１ターンに１度、自分メインフェイズに発動できる。このカードのレベルを１つ上げるか下げる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①效果1回合只能使用1次。①：可以从手牌舍弃1张其他的「サラマングレイト／转生炎兽」卡发动。将这张卡从手牌特殊召唤。②：要将自己场上的这张卡作为炎属性同调怪兽的同调素材的场合，也能将这张卡视为调整以外的怪兽。③：1回合1次，自己的主要阶段可以发动。这张卡的等级上升或下降1。
 card_type: Monster
 monster_type_line: Cyberse / Tuner / Effect
 attribute: FIRE
