--- a/data/cards/10300821.yaml
+++ b/data/cards/10300821.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: CNo.79 BK 将星之套环大拳帝
 text:
   en: |-
     3 Level 5 monsters
@@ -28,7 +28,9 @@ text:
     ①：このカードの攻撃力はこのカードのＸ素材の数×２００アップする。②：１ターンに１度、相手がモンスターを特殊召喚する際に発動できる。このカードのＸ素材を２つ取り除き、それを無効にし破壊する。③：このカードが「Ｎｏ．７９ ＢＫ 新星のカイザー」をＸ素材としている場合、以下の効果を得る。●１ターンに１度、自分の「ＢＫ」モンスターが相手モンスターと戦闘を行う攻撃宣言時に発動できる。手札・デッキから「ＢＫ」モンスター１体を墓地へ送り、その相手モンスターをこのカードのＸ素材とする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    等级5怪兽×3
+    ①：这张卡的攻击力上升这张卡的多维素材的数量×200。②：1回合1次，对手将怪兽特殊召唤之际可以发动。将这张卡的2个多维素材取除，使其无效并破坏。③：这张卡有「No.79 BK 新星のカイザー／No.79 BK 新星套环拳帝」在作为多维素材的场合，得到以下的效果。●1回合1次，自己的「BK」怪兽与对手怪兽进行战斗的攻击宣言时可以发动。从手牌·卡组将1只「BK」怪兽送入墓地，将那只对手怪兽作为这张卡的多维素材。
 card_type: Monster
 monster_type_line: Warrior / Xyz / Effect
 attribute: FIRE
