--- a/data/cards/15967552.yaml
+++ b/data/cards/15967552.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 细小的对抗者
 text:
   en: |-
     Choose 2 unused Main Monster Zones in the same column; apply this effect, then your opponent can apply it for themselves.
@@ -28,7 +28,9 @@ text:
     ●自身の手札・デッキからレベル２以下のモンスター１体を選び、指定された自身のメインモンスターゾーンに表側攻撃表示か裏側守備表示で特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：可以指定2处相同纵列的没有在使用的主要怪兽区发动。自己适用以下的效果。那之后，对手可以适用以下的效果。
+    ●从自身的手牌·卡组选1只等级2以下的怪兽，以表侧攻击表示或里侧守备表示特殊召唤到指定的自身的主要怪兽区。
 card_type: Trap
 property: Normal
 images:
