--- a/data/cards/27132400.yaml
+++ b/data/cards/27132400.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 变幻骚灵 恶意程序集束者
 text:
   en: |-
     If this card is added to your hand, except by drawing it: You can Special Summon it. If this card is Normal or Special Summoned: You can target 1 "Altergeist" monster in your GY, except "Altergeist Malwisp"; Special Summon it in Defense Position, but it cannot activate its effects this turn. You can only use each effect of "Altergeist Malwisp" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがドロー以外の方法で手札に加わった場合に発動できる。このカードを特殊召喚する。②：このカードが召喚・特殊召喚した場合、「オルターガイスト・マルウィスプ」以外の自分の墓地の「オルターガイスト」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。このターン、この効果で特殊召喚したモンスターの効果は発動できない。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：这张卡以抽卡以外的方法加入手牌的场合可以发动。将这张卡特殊召唤。②：这张卡召唤·特殊召唤的场合，可以以「オルターガイスト・マルウィスプ／变幻骚灵 恶意程序集束者」以外的自己墓地的1只「オルターガイスト／变幻骚灵」怪兽为对象发动。将那只怪兽以守备表示特殊召唤。这个回合，用这个效果特殊召唤的怪兽的效果不能发动。
 card_type: Monster
 monster_type_line: Spellcaster / Tuner / Effect
 attribute: LIGHT
