--- a/data/cards/47873397.yaml
+++ b/data/cards/47873397.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 图腾柱
 text:
   en: |-
     Your opponent cannot target Rock monsters you control with 0 original ATK with card effects. Once per attack, when an opponent's monster declares an attack: You can negate that attack, and if you do, place 1 counter on this card. If this card has 3 counters, send it to the GY. If you have 3 or more Rock monsters with 0 ATK and different names in your GY: You can banish this card from your GY; any effect damage your opponent takes this turn is doubled.
@@ -25,7 +25,8 @@ text:
     ①：自分フィールドの元々の攻撃力が０の岩石族モンスターを相手は効果の対象にできない。②：相手モンスターの攻撃宣言時に１度、発動できる。その攻撃を無効にし、このカードにカウンターを１つ置く。③：このカードにカウンターが３つ置かれている場合、このカードは墓地へ送られる。④：自分の墓地に攻撃力０の岩石族モンスターが３種類以上存在する場合、墓地のこのカードを除外して発動できる。このターン、相手が受ける効果ダメージは倍になる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：对手不能将自己场上的原本的攻击力为0的岩石族怪兽作为效果的对象。②：对手怪兽的攻击宣言时有1次可以发动。使那次攻击无效，在这张卡上放置1个指示物。③：这张卡放置有3个指示物的场合，这张卡送入墓地。④：自己的墓地有3种类以上的攻击力0的岩石族怪兽存在的场合，可以将墓地的这张卡除外发动。这个回合，对手受到的效果伤害变为2倍。
 card_type: Trap
 property: Continuous
 images:
