--- a/data/cards/62314831.yaml
+++ b/data/cards/62314831.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 新世坏=阿密哩多罗
 text:
   en: |-
     Activate this card only if "Visas Starfrost" is on the field. Once per turn, if a monster(s) you control is destroyed by battle or card effect, and sent to the GY or banished: You can activate 1 of these effects;
@@ -29,7 +29,12 @@ text:
     フィールドに「ヴィサス＝スタフロスト」が存在する場合にこのカードを発動できる。①：１ターンに１度、自分フィールドのモンスターが戦闘・効果で破壊され、墓地へ送られた場合または除外された場合、以下の効果から１つを選択して発動できる。●その内の１体を自分フィールドに守備表示で特殊召喚する。●その内の１体の攻撃力の半分だけ、フィールドのチューナー１体の攻撃力をアップする。●その内の１体をデッキに戻し、自分は１枚ドローする。●このカードをデッキに戻し、自分の墓地からフィールド魔法カード１枚を手札に加える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    场上有「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」存在的场合才可以将这张卡发动。①：1回合1次，自己场上的怪兽被战斗·效果破坏，被送入墓地的场合或者被除外的场合，可以从以下的效果中选择1个发动。
+    ●将那之内的1只以守备表示特殊召唤到自己的场上。
+    ●按照那之内的1只的攻击力的一半数值，使场上的1只调整的攻击力上升。
+    ●使那之内的1只返回卡组，自己抽1张。
+    ●使这张卡返回卡组，从自己的墓地将1张场地魔法卡加入手牌。
 card_type: Spell
 property: Field
 series:
