--- a/data/cards/70366448.yaml
+++ b/data/cards/70366448.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 猛攻抽卡
 text:
   en: |-
     Banish all monsters you control (min. 2); draw 3 cards. You cannot Normal or Special Summon monsters the turn you activate this card, except Cyberse monsters. You can only activate 1 "Drastic Draw" per turn.
@@ -25,7 +25,8 @@ text:
     このカード名のカードは１ターンに１枚しか発動できず、このカードを発動するターン、自分はサイバース族モンスターしか召喚・特殊召喚できない。①：２体以上の自分フィールドのモンスターを全て除外して発動できる。自分は３枚ドローする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张，这张卡发动的回合，自己召唤·特殊召唤的只能是电子空间族怪兽。①：可以将2只以上的自己场上的怪兽全部除外发动。自己抽3张。
 card_type: Spell
 property: Normal
 images:
