--- a/data/cards/93125329.yaml
+++ b/data/cards/93125329.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 金云兽-马龙
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -35,7 +35,9 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    调整+1只以上调整以外的怪兽
+    这个卡名的②效果1回合只能使用1次。①：这张卡特殊召唤的场合可以发动。这张卡的等级上升或下降1。②：这张卡被送入墓地的场合，可以以对手场上的1只表侧表示怪兽为对象发动。那只怪兽返回手牌。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Tuner / Effect
 attribute: LIGHT
