--- a/data/cards/98319530.yaml
+++ b/data/cards/98319530.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 『焰圣剑－阿尔玛斯』
 text:
   en: |-
     While this card is equipped to a monster: You can equip 1 "Infernoble Arms" Equip Spell from your Deck or GY to 1 appropriate monster you control, except ""Infernoble Arms - Almace"", then destroy this card. If this card is sent to the GY because the equipped monster is sent to the GY: You can target 1 of your FIRE Warrior monsters that is banished or in your GY; add it to your hand. You can only use 1 ""Infernoble Arms - Almace"" effect per turn, and only once that turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードが装備されている場合に発動できる。自分のデッキ・墓地から「『焔聖剣－アルマス』」以外の「焔聖剣」装備魔法カード１枚を選び、そのカードを装備可能な自分フィールドのモンスター１体に装備する。その後、このカードを破壊する。②：装備モンスターが墓地へ送られた事でこのカードが墓地へ送られた場合、自分の墓地・除外状態の戦士族・炎属性モンスター１体を対象として発動できる。そのモンスターを手札に加える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：这张卡装备中的场合可以发动。从自己的卡组·墓地选1张「『焔聖剣－アルマス』／『焰圣剑－阿尔玛斯』」以外的「焔聖剣／焰圣剑」装备魔法卡，将那张卡装备给可以装备的自己场上的1只怪兽。那之后，将这张卡破坏。②：装备怪兽被送入墓地使这张卡被送入墓地的场合，可以以自己的墓地·除外状态的1只战士族·炎属性怪兽为对象发动。将那只怪兽加入手牌。
 card_type: Spell
 property: Equip
 series:
