--- a/data/cards/15845914.yaml
+++ b/data/cards/15845914.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 团结与牵绊之魔导师
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by having 25 or more cards in your GY. Gains 2500 ATK/DEF while your opponent has 25 or more cards in their GY.
@@ -25,7 +25,8 @@ text:
     このカードは通常召喚できない。自分の墓地にカードが２５枚以上存在する場合のみ特殊召喚できる。①：相手の墓地にカードが２５枚以上存在する限り、このカードの攻撃力・守備力は２５００アップする。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这张卡不能通常召唤。仅在自己的墓地有25张以上的卡存在的场合才能特殊召唤。①：只要对手的墓地有25张以上的卡存在，这张卡的攻击力·守备力就上升2500。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
