--- a/data/cards/33872334.yaml
+++ b/data/cards/33872334.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 凤凰剑圣 基亚剑
 text:
   en: |-
     Equip only to a Warrior or FIRE monster. It gains 300 ATK. If the equipped monster attacked, at the end of the Damage Step: You can send this card to the GY; each of your Warrior and FIRE monsters can make a second attack during this Battle Phase. If this card is sent to the GY, or banished, to activate a monster effect: You can add this card to your hand. You can only use this effect of "Phoenix Gearblade" once per turn.
@@ -25,7 +25,8 @@ text:
     戦士族モンスターか炎属性モンスターにのみ装備可能。このカード名の③の効果は１ターンに１度しか使用できない。①：装備モンスターの攻撃力は３００アップする。②：装備モンスターが攻撃したダメージステップ終了時、このカードを墓地へ送って発動できる。このバトルフェイズ中、自分の戦士族モンスター及び炎属性モンスターはそれぞれ２回攻撃できる。③：このカードがモンスターの効果を発動するために、墓地へ送られた場合または除外された場合に発動できる。このカードを手札に加える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    只有战士族怪兽或炎属性怪兽才能装备。这个卡名的③效果1回合只能使用1次。①：装备怪兽的攻击力上升300。②：装备怪兽攻击的伤害步骤结束时，可以将这张卡送入墓地发动。这次战斗阶段中，自己的战士族怪兽以及炎属性怪兽各可以作2次攻击。③：这张卡在为了发动怪兽的效果，而被送入墓地的场合或者被除外的场合可以发动。将这张卡加入手牌。
 card_type: Spell
 property: Equip
 images:
