--- a/data/cards/37164373.yaml
+++ b/data/cards/37164373.yaml
@@ -75,6 +75,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: ABYR-DE048
     set_name: Abyss Rising
@@ -93,6 +94,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: ABYR-FR048
     set_name: Abyss Rising
@@ -111,6 +113,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: ABYR-IT048
     set_name: Abyss Rising
@@ -129,6 +132,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: AP06-PT022
     set_name: Astral Pack Six
@@ -142,6 +146,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: ABYR-JP048
     set_name: Abyss Rising
