--- a/data/cards/42822433.yaml
+++ b/data/cards/42822433.yaml
@@ -12,7 +12,7 @@ name:
   ko: 테라나이트 알테어
   ko_rr: Teranaiteu Alte-eo
   zh-TW:
-  zh-CN:
+  zh-CN: 星骑士 牛郎星
 text:
   en: |-
     (This card is always treated as a "Constellar" card.)
@@ -37,7 +37,8 @@ text:
   ko: |-
     이 카드명은 룰상 "세이크리드" 카드로도 취급한다. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 경우, 자신 필드의 빛 / 어둠 속성 엑시즈 몬스터의 수까지 필드의 카드를 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. ②: 자신 필드에 "테라나이트 알테어" 이외의 "테라나이트", "세이크리드" 몬스터가 특수 소환되었을 경우에 발동할 수 있다. 이 카드를 묘지에서 특수 소환한다. 이 턴에, 자신은 엑시즈 몬스터로밖에 공격 선언할 수 없다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名规则上也当作「セイクリッド／神星骑」卡使用。这个卡名的①②效果1回合各能使用1次。①：这张卡召唤、反转召唤或特殊召唤成功的场合，可以以最多为自己场上的光或暗属性的多维怪兽的数量的场上的卡为对象发动。将那些卡破坏。②：自己场上有「星騎士 アルテア／星骑士 牛郎星」以外的「テラナイト／星骑士」卡、「セイクリッド／神星骑」卡被特殊召唤的场合可以发动。将这张卡从墓地特殊召唤。这个回合，自己只能用多维怪兽攻击宣言。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: LIGHT
