--- a/data/cards/53129443.yaml
+++ b/data/cards/53129443.yaml
@@ -135,6 +135,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   - set_number: LOB-052
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -312,6 +313,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: LDD-F041
     set_name: Legend of Blue Eyes White Dragon
@@ -425,6 +427,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: LDD-I041
     set_name: Legend of Blue Eyes White Dragon
@@ -538,6 +541,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: LDB-P052
     set_name: Legend of Blue Eyes White Dragon
@@ -623,6 +627,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: ''
     set_name: Vol.1
