--- a/data/cards/55349196.yaml
+++ b/data/cards/55349196.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 双头龙 恐龙王
 text:
   en: |-
     If you control no monsters, you can Special Summon this card (from your hand). You can only Special Summon "King Rex the Twin-Headed Dragon" once per turn this way. If this card is Normal or Special Summoned: You can target 1 monster on the field with less ATK than the total ATK of all Dinosaur monsters you control; destroy it. You can only use this effect of "King Rex the Twin-Headed Dragon" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：自分フィールドにモンスターが存在しない場合、このカードは手札から特殊召喚できる。②：このカードが召喚・特殊召喚した場合、自分フィールドの恐竜族モンスターの攻撃力の合計より低い攻撃力を持つフィールドのモンスター１体を対象として発動できる。そのモンスターを破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的以①的方法所作的特殊召唤1回合只能1次，②效果1回合只能使用1次。①：自己场上没有怪兽存在的场合，这张卡可以从手牌特殊召唤。②：这张卡召唤·特殊召唤的场合，可以以拥有比自己场上的恐龙族怪兽的攻击力合计低的攻击力的场上的1只怪兽为对象发动。将那只怪兽破坏。
 card_type: Monster
 monster_type_line: Dinosaur / Effect
 attribute: EARTH
