--- a/data/cards/55461744.yaml
+++ b/data/cards/55461744.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 大翼之巴风特
 text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 Level 4 Beast monster and/or 1 "Chimera Fusion" from your Deck to your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fusion Monsters. If this card is sent to the GY as material for a Fusion Summon: You can target 1 Illusion monster in your GY; Special Summon it. You can only use each effect of "Berfomet the Great Wings" once per turn.
@@ -25,7 +25,8 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。獣族・レベル４モンスター及び「合成獣融合」をそれぞれ１枚までデッキから手札に加える。この効果の発動後、ターン終了時まで自分は融合モンスターしかＥＸデッキから特殊召喚できない。②：このカードが融合召喚の素材となって墓地へ送られた場合、自分の墓地の幻想魔族モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：这张卡召唤·特殊召唤成功的场合可以发动。从卡组将兽族·等级4怪兽以及「合成獣融合／合成兽融合」各1张加入手牌。这个效果发动后，直到回合结束时为止自己从额外卡组特殊召唤的只能是融合怪兽。②：这张卡成为融合召唤的素材被送入墓地的场合，可以以自己墓地的1只幻想魔族怪兽为对象发动。将那只怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
