--- a/data/cards/76593718.yaml
+++ b/data/cards/76593718.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 强欲之瓮
 text:
   en: |-
     FLIP: Apply these effects, in sequence.
@@ -30,7 +30,10 @@ text:
     ●ＥＸデッキから特殊召喚された相手フィールドのモンスターの数まで、自分のＥＸデッキからモンスターを墓地へ送る。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的效果1回合只能使用1次。①：这张卡翻转的场合必定发动。分别适用以下的效果。
+    ●从自己卡组上面将最多为对手场上的卡的数量的卡翻开，从那之中选1张加入手牌，剩下的送入墓地。
+    ●从自己的额外卡组将最多为从额外卡组特殊召唤的对手场上的怪兽的数量的怪兽送入墓地。
 card_type: Monster
 monster_type_line: Rock / Flip / Effect
 attribute: EARTH
