--- a/data/cards/85106525.yaml
+++ b/data/cards/85106525.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 篝火
 text:
   en: |-
     Add 1 Level 4 or lower Pyro monster from your Deck to your hand. You can only activate 1 "Bonfire" per turn.
@@ -25,7 +25,8 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキからレベル４以下の炎族モンスター１体を手札に加える。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：从卡组将1只等级4以下的炎族怪兽加入手牌。
 card_type: Spell
 property: Normal
 images:
