--- a/data/cards/33365932.yaml
+++ b/data/cards/33365932.yaml
@@ -71,6 +71,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+    - Quarter Century Secret Rare
   - set_number: DT06-EN051
     set_name: Duel Terminal 6b
     rarities:
@@ -101,6 +102,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: FOTB-FR009
     set_name: Force of the Breaker
@@ -127,6 +129,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: FOTB-IT009
     set_name: Force of the Breaker
@@ -153,6 +156,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: SDSB-PT021
     set_name: 'Structure Deck: Soulburner'
@@ -170,6 +174,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: FOTB-JP009
     set_name: Force of the Breaker
