--- a/data/rush/16983.yaml
+++ b/data/rush/16983.yaml
@@ -47,7 +47,7 @@ level: 8
 atk: 0
 def: 2500
 series:
-- Fiendish Commander
+- Three Rulers
 images:
 - index: 1
   image: KimelunatheDarkShifter-RDKP07-JP-SR.png
