--- a/data/cards/55920742.yaml
+++ b/data/cards/55920742.yaml
@@ -55,6 +55,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: GRCR-DE005
     set_name: The Grand Creators
@@ -65,6 +66,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: GRCR-FR005
     set_name: The Grand Creators
@@ -75,6 +77,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: GRCR-IT005
     set_name: The Grand Creators
@@ -85,6 +88,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: GRCR-PT005
     set_name: The Grand Creators
@@ -95,6 +99,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DBGC-JP005
     set_name: 'Deck Build Pack: Grand Creators'
