--- a/data/cards/70711847.yaml
+++ b/data/cards/70711847.yaml
@@ -62,6 +62,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: CYHO-DE083
     set_name: Cybernetic Horizon
@@ -79,6 +80,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: CYHO-FR083
     set_name: Cybernetic Horizon
@@ -96,6 +98,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: CYHO-IT083
     set_name: Cybernetic Horizon
@@ -113,6 +116,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: CYHO-PT083
     set_name: Cybernetic Horizon
@@ -130,6 +134,7 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: EP19-JP022
     set_name: Extra Pack 2019
