--- a/rush.yaml
+++ b/rush.yaml
@@ -16667,6 +16667,8 @@ attribute: WATER
 level: 3
 atk: 900
 def: 600
+series:
+- Umi
 images:
 - index: 1
   image: AnchorMoray-RDKP03-JP-R.png
@@ -17439,6 +17441,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Umi
 images:
 - index: 1
   image: AquaBoost-RDKP03-JP-C.png
@@ -47987,6 +47991,8 @@ attribute: WATER
 level: 3
 atk: 1000
 def: 1200
+series:
+- Umi
 images:
 - index: 1
   image: SeaStarTrooper-RDVSP1-JP-C.png
@@ -48121,6 +48127,8 @@ attribute: WATER
 level: 7
 atk: 2500
 def: 1200
+series:
+- Umi
 images:
 - index: 1
   image: HeadbuttCachalot-RDKP07-JP-SR.png
