--- a/data/cards/31122090.yaml
+++ b/data/cards/31122090.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     利用神圣的力量守护弱者，给予弱者逆转力量的女神。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: LIGHT
 level: 6
 atk: 1800
