--- a/data/cards/50548657.yaml
+++ b/data/cards/50548657.yaml
@@ -8,7 +8,7 @@ name:
   it: Promptcorno
   pt: Chifreprompt
   ja: プロンプトホーン
-  ja_romaji: Puronputo Hōn
+  ja_romaji: Puronputohōn
   ko: 프롬프트혼
   ko_rr:
   zh-TW:
