--- a/data/rush/yugipedia937018.yaml
+++ b/data/rush/yugipedia937018.yaml
@@ -53,4 +53,5 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Super Rare
+    - Secret Rare
 yugipedia_page_id: 937018
