--- a/rush.yaml
+++ b/rush.yaml
@@ -101858,6 +101858,7 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Super Rare
+    - Secret Rare
 yugipedia_page_id: 937018
 ---
 konami_id:
