--- a/data/cards/84430950.yaml
+++ b/data/cards/84430950.yaml
@@ -42,10 +42,10 @@ def: 800
 images:
 - index: 1
   image: ArmedSamuraiBenKei-EE3-JP-C.png
-  illustration: ArmedSamuraiBenKei-TF05-JP-VG-artwork
+  illustration: ArmedSamuraiBenKei-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: ArmedSamuraiBenKei-LCYW-EN-C-1E.png
-  illustration: ArmedSamuraiBenKei-TF04-EN-VG-artwork
+  illustration: ArmedSamuraiBenKei-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: FET-EN023
