--- a/data/cards/92015800.yaml
+++ b/data/cards/92015800.yaml
@@ -8,7 +8,7 @@ name:
   it: "Numero 76: Gradielle l'Armonizzatrice"
   pt: 'Número 76: Harmonizadora Gradielle'
   ja: <ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>７６ <ruby>諧<rt>かい</rt></ruby><ruby>調<rt>ちょう</rt></ruby><ruby>光<rt>こう</rt></ruby><ruby>師<rt>し</rt></ruby>グラディエール
-  ja_romaji: Nanbāzu Nanajūroku Kaichō Kōshi Guradiēru
+  ja_romaji: Nanbāzu Nanajūroku Kaichōkōshi Guradiēru
   ko: No.76 해조광사 그라디엘
   ko_rr: Neombeojeu Chilsipyuk Haejogwangsa Geuradiel
   zh-TW:
