--- a/data/cards/93568288.yaml
+++ b/data/cards/93568288.yaml
@@ -8,7 +8,7 @@ name:
   it: 'Numero 80: Rapsodia in Berserk'
   pt: 'Número 80: Rapsódia Enfurecido'
   ja: <ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>８０ <ruby>狂<rt>きょう</rt></ruby><ruby>装<rt>そう</rt></ruby><ruby>覇<rt>は</rt></ruby><ruby>王<rt>おう</rt></ruby>ラプソディ・イン・バーサーク
-  ja_romaji: Nanbāzu Hachijū Kyōsō Haō Rapusodi In Bāsāku
+  ja_romaji: Nanbāzu Hachijū Kyōsōhaō Rapusodi In Bāsāku
   ko: No.80 광장패왕 랩소디 인 버서크
   ko_rr:
   zh-TW:
