--- a/data/cards/36045450.yaml
+++ b/data/cards/36045450.yaml
@@ -38,13 +38,13 @@ property: Normal
 images:
 - index: 1
   image: MagiciansUnite-15AY-JP-UR.png
-  illustration: MagiciansUnite-TF04-JP-VG.jpg
+  illustration: MagiciansUnite-TF05-JP-VG-artwork.png
 - index: '1.1'
   image: MagiciansUnite-SBLS-EN-C-1E.png
-  illustration: MagiciansUnite-TF04-EN-VG.jpg
+  illustration: MagiciansUnite-MADU-EN-VG-artwork.png
 - index: '1.2'
   image: MagiciansUnite-LG01-JP-C.png
-  illustration: MagiciansUnite-LOD2-JP-VG-artwork.jpg
+  illustration: MagiciansUnite-MADU-JP-VG-artwork.png
 sets:
   en:
   - set_number: CP03-EN001
