--- a/data/rush/15821.yaml
+++ b/data/rush/15821.yaml
@@ -52,7 +52,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: Forest-RDKP03-JP-R.png
+  image: Forest-RDB221-JP-C.png
 sets:
   ja:
   - set_number: RD/KP03-JP053
