--- a/data/cards/09720537.yaml
+++ b/data/cards/09720537.yaml
@@ -38,13 +38,13 @@ property: Normal
 images:
 - index: 1
   image: OwnersSeal-AT03-JP-C.png
-  illustration: OwnersSeal-TF04-JP-VG.jpg
+  illustration: OwnersSeal-TF05-JP-VG-artwork.png
 - index: '1.1'
   image: OwnersSeal-SDSA-EN-C-1E.png
-  illustration: OwnersSeal-TF04-EN-VG.jpg
+  illustration: OwnersSeal-MADU-EN-VG-artwork.png
 - index: '1.2'
   image: OwnersSeal-SD38-JP-C.png
-  illustration: OwnersSeal-LOD2-JP-VG-artwork.jpg
+  illustration: OwnersSeal-MADU-JP-VG-artwork.png
 sets:
   en:
   - set_number: LODT-EN094
