--- a/data/cards/88472456.yaml
+++ b/data/cards/88472456.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 暗黑英雄 尸魔侠
 text:
   en: |-
-    Cannot attack your opponent directly. If this card destroys a monster by battle: This card loses 200 ATK.
+    Cannot attack directly. If this card destroys a monster by battle: This card loses 200 ATK.
   de: |-
     Kann deinen Gegner nicht direkt angreifen. Falls diese Karte ein Monster durch Kampf zerstört: Diese Karte verliert 200 ATK.
   es: |-
@@ -41,7 +41,7 @@ atk: 2100
 def: 500
 images:
 - index: 1
-  image: ZombyratheDark-BE02-JP-C.jpg
+  image: ZombyratheDark-LART-EN-UR-LE.png
   illustration: ZombyratheDark-TF04-JP-VG.jpg
 - index: '1.1'
   image: ZombyratheDark-SBCB-EN-C-1E.png
@@ -74,6 +74,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: LART-EN059
+    set_name: The Lost Art Promotion 2023 F
+    rarities:
+    - Ultra Rare
   - set_number: LON-074
     set_name: Labyrinth of Nightmare
     rarities:
@@ -109,6 +113,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: LART-DE059
+    set_name: The Lost Art Promotion 2023 F
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LDC-F074
     set_name: Labyrinth of Nightmare
@@ -136,6 +144,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: LART-FR059
+    set_name: The Lost Art Promotion 2023 F
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LDI-I074
     set_name: Labyrinth of Nightmare
@@ -163,6 +175,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: LART-IT059
+    set_name: The Lost Art Promotion 2023 F
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SYE-PT022
     set_name: 'Starter Deck: Yugi Evolution'
@@ -173,6 +189,10 @@ sets:
     rarities:
     - Common
     - Mosaic Rare
+  - set_number: LART-PT059
+    set_name: The Lost Art Promotion 2023 F
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: LN-23
     set_name: Labyrinth of Nightmare (Japanese)
