--- a/rush.yaml
+++ b/rush.yaml
@@ -5905,7 +5905,7 @@ series:
 - Gaia
 images:
 - index: 1
-  image: GaiaTheFierceKnight-RDSBD3-JP-C.png
+  image: GaiaTheFierceKnight-RDB221-JP-C.png
 sets:
   ja:
   - set_number: RD/WJMP-JP001
@@ -9110,7 +9110,7 @@ series:
 - Beast Gear
 images:
 - index: 1
-  image: ApocalypseBeastGearWorld-RDGRP1-JP-C.png
+  image: ApocalypseBeastGearWorld-RDB222-JP-C.png
 sets:
   ja:
   - set_number: RD/KP02-JP039
@@ -9191,7 +9191,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: ThousandKnives-RDKP02-JP-C.png
+  image: ThousandKnives-RDB004-JP-C.png
 sets:
   ja:
   - set_number: RD/KP02-JP040
@@ -15291,7 +15291,7 @@ atk: 1500
 def: 1200
 images:
 - index: 1
-  image: GazelletheKingofMythicalBeasts-RDKP03-JP-R.png
+  image: GazelletheKingofMythicalBeasts-RDB221-JP-C.png
 sets:
   ja:
   - set_number: RD/KP03-JP011
@@ -17658,7 +17658,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: Forest-RDKP03-JP-R.png
+  image: Forest-RDB221-JP-C.png
 sets:
   ja:
   - set_number: RD/KP03-JP053
@@ -40529,7 +40529,7 @@ atk: 0
 def: 1000
 images:
 - index: 1
-  image: AmazingDealer-RDGRD0-JP-C.png
+  image: AmazingDealer-RDB222-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD1-JP019
@@ -44671,7 +44671,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: KengoShogunoftheCrescentMoon-RDEXT1-JP-R.png
+  image: KengoShogunoftheCrescentMoon-RDB221-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP033
@@ -69520,7 +69520,7 @@ def: 1600
 legend: true
 images:
 - index: 1
-  image: LusterDragon-RDVC22-JP-UR.png
+  image: LusterDragon-RDVC22-JP-OP.png
 sets:
   ja:
   - set_number: RD/VC22-JP001
