--- a/data/cards/98049038.yaml
+++ b/data/cards/98049038.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Si esta carta ataca, destruye 1 Carta Mágica o de Trampa al final de la Battle Phase si controlas otro monstruo "roid".
   fr: |-
-    Si cette carte attaque, détruisez 1 Carte Magie ou Piège à la fin de la Battle Phase si vous contrôlez un autre monstre "roid".
+    À la fin de votre Battle Phase, si cette carte a combattu : ciblez 1 Magie/Piège sur le Terrain ; détruisez la cible. Vous devez contrôler un autre monstre "roid" pour activer et résoudre cet effet.
   it: |-
     Se questa carta attacca, distruggi 1 Carta Magia o Trappola alla fine della Battle Phase se controlli un altro mostro "roid".
   pt: |-
