--- a/data/rush/16345.yaml
+++ b/data/rush/16345.yaml
@@ -46,7 +46,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: JAMPUp-RDKP05-JP-R.png
+  image: JAMPUp-RDB223-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP039
