--- a/data/rush/16346.yaml
+++ b/data/rush/16346.yaml
@@ -46,7 +46,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: JAMPStart-RDKP05-JP-C.png
+  image: JAMPStart-RDB223-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP040
