--- a/rush.yaml
+++ b/rush.yaml
@@ -30472,7 +30472,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: JAMPUp-RDKP05-JP-R.png
+  image: JAMPUp-RDB223-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP039
@@ -30539,7 +30539,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: JAMPStart-RDKP05-JP-C.png
+  image: JAMPStart-RDB223-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP040
@@ -69520,7 +69520,7 @@ def: 1600
 legend: true
 images:
 - index: 1
-  image: LusterDragon-RDVC22-JP-OP.png
+  image: LusterDragon-RDVC22-JP-UR.png
 sets:
   ja:
   - set_number: RD/VC22-JP001
