--- a/data/cards/89516305.yaml
+++ b/data/cards/89516305.yaml
@@ -8,7 +8,7 @@ name:
   it: 'Numero 87: Regina della Notte'
   pt: 'Número 87: Rainha da Noite'
   ja: <ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>８７ <ruby>雪<rt>せつ</rt></ruby><ruby>月<rt>げっ</rt></ruby><ruby>花<rt>か</rt></ruby><ruby>美<rt>び</rt></ruby><ruby>神<rt>しん</rt></ruby>クイーン・オブ・ナイツ
-  ja_romaji: Nanbāzu Hachijūnana Setsugekka Bishin Kuīn Obu Naitsu
+  ja_romaji: Nanbāzu Hachijūnana Setsugekkabishin Kuīn Obu Naitsu
   ko: No.87 설월화미신 퀸 오브 나이츠
   ko_rr:
   zh-TW:
