--- a/data/rush/18941.yaml
+++ b/data/rush/18941.yaml
@@ -56,4 +56,8 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RD/BDG5-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Duel-5 Blu-ray & DVD promotional card
+    rarities:
+    - Ultra Parallel Rare
 yugipedia_page_id: 929280
