--- a/data/rush/yugipedia975309.yaml
+++ b/data/rush/yugipedia975309.yaml
@@ -26,7 +26,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    Maximum Mode: Send 1 FIRE Attribute or Pyro Type monster from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -38,7 +38,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Inflict 1000 damage to your opponent. Then, this turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
