--- a/data/cards/24435369.yaml
+++ b/data/cards/24435369.yaml
@@ -42,10 +42,10 @@ def: 700
 images:
 - index: 1
   image: MermaidKnight-EE2-JP-R.jpg
-  illustration: MermaidKnight-TF04-JP-VG.jpg
+  illustration: MermaidKnight-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: MermaidKnight-DR2-EN-R-UE.jpg
-  illustration: MermaidKnight-TF04-EN-VG.jpg
+  illustration: MermaidKnight-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SD4-EN011
