--- a/data/rush/yugipedia975310.yaml
+++ b/data/rush/yugipedia975310.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    Shuffle 1 FIRE Attribute Thunder Type monster from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Destroy 1 face-up Level 9 or lower monster on your opponent's field. Then, if this card is in Maximum Mode, you can destroy 1 monster on your opponent's field.
   de:
   es:
   fr:
