--- a/data/rush/yugipedia975311.yaml
+++ b/data/rush/yugipedia975311.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    Shuffle 1 FIRE Attribute Aqua Type monster from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Destroy 1 Spell/Trap Card on your opponent's field. Then, if this card is in Maximum Mode, you can destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
