--- a/rush.yaml
+++ b/rush.yaml
@@ -102565,7 +102565,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    Maximum Mode: Send 1 FIRE Attribute or Pyro Type monster from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -102577,7 +102577,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Inflict 1000 damage to your opponent. Then, this turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -102622,7 +102622,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    Shuffle 1 FIRE Attribute Thunder Type monster from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -102634,7 +102634,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Destroy 1 face-up Level 9 or lower monster on your opponent's field. Then, if this card is in Maximum Mode, you can destroy 1 monster on your opponent's field.
   de:
   es:
   fr:
@@ -102678,7 +102678,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    Shuffle 1 FIRE Attribute Aqua Type monster from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -102690,7 +102690,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Destroy 1 Spell/Trap Card on your opponent's field. Then, if this card is in Maximum Mode, you can destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
