--- a/data/rush/yugipedia975309.yaml
+++ b/data/rush/yugipedia975309.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「火轟嵐凰ヴォルカライズ・フェニックス［Ｌ］」「火轟嵐凰ヴォルカライズ・フェニックス［Ｒ］」と揃えてマキシマム召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,19 +33,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    マキシマムモード：手札のモンスター（炎属性または炎族）１体を墓地へ発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Inflict 1000 damage to your opponent. Then, this turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    Inflict 1000 damage to your opponent. Also, this turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手に１０００ダメージを与える。さらにこのターン、このカードは相手の罠カードの効果では破壊されず、その攻撃は貫通する。
   ko:
   zh-TW:
   zh-CN:
