--- a/data/cards/33099732.yaml
+++ b/data/cards/33099732.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19233
+password: 33099732
 name:
   en: Over Future Fusion
   de:
@@ -24,7 +24,10 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：以下の効果から１つを選択して発動できる（このカード名の以下の効果はそれぞれ１ターンに１度しか選択できない）。
+    ●ＥＸデッキの融合モンスター１体を相手に見せ、そのモンスターにカード名が記された融合素材モンスター１体をデッキから墓地へ送る。このターン、自分はこの効果で墓地へ送ったモンスター及びその同名モンスターを特殊召喚できず、そのモンスター効果を発動できない。
+    ●自分の墓地のモンスターを融合素材として除外し、機械族・闇属性の融合モンスター１体を融合召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -44,5 +47,5 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 936649
