--- a/data/rush/yugipedia975311.yaml
+++ b/data/rush/yugipedia975311.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（炎属性／水族）１体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの魔法・罠カード１枚を選んで破壊する。このカードがマキシマムモードの場合、さらに相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
