--- a/rush.yaml
+++ b/rush.yaml
@@ -102559,7 +102559,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「火轟嵐凰ヴォルカライズ・フェニックス［Ｌ］」「火轟嵐凰ヴォルカライズ・フェニックス［Ｒ］」と揃えてマキシマム召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -102571,19 +102572,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    マキシマムモード：手札のモンスター（炎属性または炎族）１体を墓地へ発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Inflict 1000 damage to your opponent. Then, this turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    Inflict 1000 damage to your opponent. Also, this turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手に１０００ダメージを与える。さらにこのターン、このカードは相手の罠カードの効果では破壊されず、その攻撃は貫通する。
   ko:
   zh-TW:
   zh-CN:
@@ -102628,7 +102631,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（炎属性／雷族）１体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -102640,7 +102644,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（レベル９以下）１体を選んで破壊する。このカードがマキシマムモードの場合、さらに相手フィールドのモンスター１体を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -102684,7 +102689,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（炎属性／水族）１体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -102696,7 +102702,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの魔法・罠カード１枚を選んで破壊する。このカードがマキシマムモードの場合、さらに相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
